--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
     "@nextui-org/react": "^2.6.11",
+    "@vercel/analytics": "^1.4.1",
     "next": "15.1.5",
     "next-themes": "^0.4.4",
     "qrcode.react": "^4.2.0",
