--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
     "@nextui-org/react": "^2.6.11",
+    "@types/qrcode": "^1.5.5",
     "@vercel/analytics": "^1.4.1",
     "dayjs": "^1.11.13",
     "next": "15.1.5",
     "next-themes": "^0.4.4",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
