--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^2.6.11",
     "@types/qrcode": "^1.5.5",
     "@vercel/analytics": "^1.4.1",
+    "@vercel/speed-insights": "^1.1.0",
     "dayjs": "^1.11.13",
     "next": "15.1.5",
     "next-themes": "^0.4.4",
